left nav alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -321,8 +321,8 @@
 
 .left_main_accord .top_fst_menu .panel-heading .panel-title>a::before {
     background: url(../images/products.png);
-    width: 20px;
-    height: 24px;
+    width: 16px;
+    height: 18px;
 }
 .left_main_accord .top_fst_menu .panel-heading:hover .panel-title>a::before{
     background: url(../images/products_hover.png);
@@ -346,8 +346,8 @@
 
 .left_main_accord .reporting .panel-heading .panel-title>a::before {
     background: url(../images/reporting.png);
-    width: 20px;
-    height: 20px;
+    width: 16px;
+    height: 18px;
 }
 .left_main_accord .reporting .panel-heading:hover .panel-title>a::before {
     background: url(../images/reporting_hover.png);
